feat #48 mejoras generales en frontend y microservicios